# CatGatekeeperNext

./: .gitignore  CMakeLists.txt  DESIGN.md  README.md  justfile
.github/workflows/: build.yml  windows-build.yml
assets/: manifest.conf
assets/processed/: manifest.conf
examples/: config.conf
overlay/: FrameSequence.cpp  FrameSequence.h  OverlayWindow.cpp  OverlayWindow.h  ProcessedAssets.cpp  ProcessedAssets.h  VideoFrameDecoder.cpp  VideoFrameDecoder.h  main.cpp  processed-assets.qrc
src/: config.c  config.h  control.c  control.h  ctl.c  idle.c  idle.h  log.c  log.h  logind.c  logind.h  main.c  reminder.c  reminder.h
systemd/: cat-gatekeeper.service  cat-gatekeeper.service.in
tools/: package-portable.sh  preprocess-assets.sh
windows/: cat-gatekeeper.bat  dismiss.bat  quit.bat  start.bat  status.bat  trigger.bat
